# meson

./: .appveyor.yml  .travis.yml  azure-pipelines.yml  run_code_tests.py  run_cross_test.py  run_project_tests.py  run_tests.py  run_unittests.py
.github/workflows/: cygwin.yml  file_format.yml  images.yml  macos.yml  msys2.yml  nonative.yml  nonnative.yml  os_comp.yml  unusedargs_missingreturn.yml  windows.yml
ci/: appveyor-install.bat  appveyor_cygwin.bat  appveyor_msvc.bat  appveyor_msys2-mingw.bat  azure-steps.yml  install-dmd.ps1  run.ps1
ci/ciimage/cygwin/: Dockerfile
cross/: arm64cl.txt  linux-mingw-w64-64bit.json  ubuntu-armhf.json
data/: test.schema.json
docs/markdown/: Contributing.md  Reference-manual.md  Reference-tables.md
docs/markdown/snippets/: d-options-for-meson-setup.md  languages_keywords_for_project.md  native_compiler_not_required.md  version_comparison.md
mesonbuild/: build.py  coredata.py  environment.py  interpreter.py  linkers.py  mconf.py  mesonlib.py  mesonmain.py  mlog.py  mtest.py
mesonbuild/ast/: introspection.py
mesonbuild/backend/: backends.py  ninjabackend.py
mesonbuild/compilers/: c.py  compilers.py  cpp.py  d.py  linker.py  objc.py  objcpp.py
mesonbuild/dependencies/: base.py  misc.py  ui.py
mesonbuild/modules/: windows.py
mesonbuild/scripts/: meson_exe.py
test cases/common/114 skip/: test.json
test cases/common/117 shared module/: test.json
test cases/common/119 cpp and asm/: test.json
test cases/common/121 shared module/: meson.build
test cases/common/122 llvm ir and assembly/: meson.build
test cases/common/123 cpp and asm/: meson.build
test cases/common/123 llvm ir and assembly/: square-x86_64.S
test cases/common/126 generated llvm ir/: test.json
test cases/common/127 generated assembly/: test.json
test cases/common/131 override options/: meson.build
test cases/common/132 generated assembly/: meson.build  square-x86_64.S.in
test cases/common/133 c cpp and asm/: test.json
test cases/common/143 C and CPP link/: meson.build
test cases/common/156 config tool variable/: test.json
test cases/common/173 as-needed/: test.json
test cases/common/174 library no sources/: main.c  meson.build
test cases/common/184 openmp/: test.json
test cases/common/190 install_mode/: test.json
test cases/common/196 same target name/: meson.build
test cases/common/197 test depends/: meson.build
test cases/common/203 find_library and headers/: test.json
test cases/common/205 native file path override/: test.json
test cases/common/209 link custom_i single from multiple/: test.json
test cases/common/219 include_type dependency/: test.json
test cases/common/22 object extraction/: test.json
test cases/common/221 zlib/: test.json
test cases/common/230 external project/: test.json
test cases/common/234 custom target shell pickle/: append.sh  meson.build  tool.c  toollib.c  toollib.h
test cases/common/237 custom target shell pickle/: copyfile.py  meson.build  static.txt
test cases/common/240 dependency native host == build/: test.json
test cases/common/249 install_symlink/: meson.build  test.json
test cases/common/250 system include dir/: test.json
test cases/common/268 install functions and follow symlinks/: test.json
test cases/common/272 unity/: test.json
test cases/common/282 -D_FORTIFY_SOURCE=2 and -O0/: test.json
test cases/common/44 pkgconfig-gen/: test.json
test cases/common/64 custom header generator/: meson.build
test cases/common/90 identical target name in subproject/: meson.build
test cases/failing/1 project not first/: expected_stdout.txt
test cases/failing/10 out of bounds/: expected_stdout.txt
test cases/failing/11 object arithmetic/: expected_stdout.txt
test cases/failing/110 project positional and languages/: meson.build  test.json
test cases/failing/12 string arithmetic/: expected_stdout.txt
test cases/failing/13 array arithmetic/: expected_stdout.txt
test cases/failing/14 invalid option name/: expected_stdout.txt
test cases/failing/15 kwarg before arg/: expected_stdout.txt
test cases/failing/16 extract from subproject/: expected_stdout.txt
test cases/failing/17 same target/: expected_stdout.txt
test cases/failing/18 wrong plusassign/: expected_stdout.txt
test cases/failing/19 target clash/: expected_stdout.txt
test cases/failing/2 missing file/: expected_stdout.txt
test cases/failing/20 version/: expected_stdout.txt
test cases/failing/21 subver/: expected_stdout.txt
test cases/failing/22 assert/: expected_stdout.txt
test cases/failing/23 rel testdir/: expected_stdout.txt
test cases/failing/24 int conversion/: expected_stdout.txt
test cases/failing/25 badlang/: expected_stdout.txt
test cases/failing/26 output subdir/: expected_stdout.txt
test cases/failing/27 noprog use/: expected_stdout.txt
test cases/failing/28 no crossprop/: expected_stdout.txt
test cases/failing/29 nested ternary/: expected_stdout.txt
test cases/failing/3 missing subdir/: expected_stdout.txt
test cases/failing/30 invalid man extension/: expected_stdout.txt
test cases/failing/31 no man extension/: expected_stdout.txt
test cases/failing/32 exe static shared/: expected_stdout.txt
test cases/failing/33 non-root subproject/: expected_stdout.txt
test cases/failing/34 dependency not-required then required/: expected_stdout.txt
test cases/failing/35 project argument after target/: expected_stdout.txt
test cases/failing/36 pkgconfig dependency impossible conditions/: expected_stdout.txt
test cases/failing/37 has function external dependency/: expected_stdout.txt
test cases/failing/38 libdir must be inside prefix/: expected_stdout.txt
test cases/failing/39 prefix absolute/: expected_stdout.txt
test cases/failing/4 missing meson.build/: expected_stdout.txt
test cases/frameworks/17 mpi/: meson.build  skip_ci_configs.txt
test cases/frameworks/19 pcap/: meson.build
test cases/frameworks/20 cups/: meson.build
test cases/frameworks/3 gmock/: meson.build
test cases/windows/16 resource scripts with duplicate filenames/: meson.build
(+85 files in other folders)
